# cf-ddns

./: Cargo.toml  README.md  example.yml
src/: cmd.rs  config.rs  dns.rs  ip.rs  lib.rs  main.rs
